objects/SPM_Region__c.object
<CustomObject>
    <fields>
        <fullName>Region_ID__c</fullName>
        <displayFormat>REG-{000}</displayFormat>
        <label>Region ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>SPM_Division__c</fullName>
        <description>SPM Division Master-Detail ref</description>
        <inlineHelpText>SPM Division Master-Detail ref</inlineHelpText>
        <label>SPM Division</label>
        <referenceTo>SPM_Division__c</referenceTo>
        <relationshipLabel>SPM Regions</relationshipLabel>
        <relationshipName>SPM_Regions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Source_Region_ID__c</fullName>
        <description>to be deleted</description>
        <externalId>true</externalId>
        <label>Source Region ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
</CustomObject>